--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div id="iframe-dynamic" class="article-sub">
                 <iframe src="http://campintouch/ui/forms/application/camper/App?domain=boulder&notemplate=1"
                         style="width:100%; min-width:530px"
-                        scrolling="no" />
+                        scrolling="no" ></iframe>
             </div>
         </article>
         <aside>
