--- a/index.html
+++ b/index.html
@@ -3,47 +3,58 @@
 <head>
     <meta charset="utf-8" />
 
-    <title>Reactive IFrames - Example</title>
+    <title>CIT IFrame - Example</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0; user-scalable=no;">
 
-    <link rel="stylesheet" type="text/css" media="all" href="css/reset.meyerweb.css">
-    <link rel="stylesheet" type="text/css" media="all" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" media="all" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
     <!--<script type="text/javascript" src="../js/reactive.iframes.parent.js"></script>-->
     <script type="text/javascript" src="http://campintouch/js/iframe_parent_script.js"></script>
+
+    <script type="text/javascript">
+        document.addEventListener("DOMContentLoaded", function () {
+            //Tell the parent div it is a reactive iframe parent (this step can happen at any point)
+            var zIndex = 1000;
+            var heightToAdd = 0;
+            var iframeParentId = 'iframe-dynamic';
+            new reactive.iframes.Parent(document.getElementById(iframeParentId), iframeParentId, heightToAdd, zIndex);
+        });
+    </script>
 </head>
-<body style="background-color:lightgrey;">
-    <main>
-        <header>
-            <h1>Summer Camp</h1>
-        </header>
-        <article>
+<body style="background-color:lightgrey;" class="container">
+    <header>
+        <h1>Summer Camp</h1>
+        <div style="background-image:url('img/lake_cover.jpg');
+                    height:200px;
+                    background-size: cover;
+                    background-position: center;"></div>
+        <hr/>
+    </header>
+    <main class="row">
+        <article class="col-lg-8">
             <h2>Main Page Content</h2>
             <h3>Static content section</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus facilisis maximus urna quis scelerisque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nunc at sem vel quam congue pharetra. Integer at odio et dui tristique elementum. Integer quam lectus, euismod vel dictum ac, pellentesque id lectus. Morbi facilisis molestie tincidunt. Nam vitae est a nisl venenatis dignissim. Integer non laoreet libero. Mauris nisl mi, auctor id sagittis ut, interdum sed elit. Suspendisse potenti. Pellentesque tempor mi sapien, a lobortis tellus iaculis at. Vestibulum eget diam vulputate, varius lacus eget, tempor nisi. Proin aliquet nulla at rhoncus molestie.</p>
             <p>In tincidunt tortor ligula. Mauris molestie varius leo, et lacinia arcu pharetra quis. Maecenas tincidunt ex non odio pharetra porta. Nullam auctor efficitur metus id laoreet. Quisque volutpat risus at dapibus pharetra. Quisque accumsan molestie lobortis. Sed ut nisl elit. Sed non placerat elit, mollis aliquet velit.</p>
             <div id="iframe-dynamic" class="article-sub">
                 <iframe src="http://campintouch/ui/forms/application/camper/App?domain=boulder&notemplate=1"
-                        style="width:100%; 
+                        style="width:100%;
                                min-width:530px;
                                background-color:lightgrey;"
-                        scrolling="no" 
+                        scrolling="no"
+                        frameborder="0"
                         id="CampMinderIFrame"></iframe>
             </div>
+            <hr />
         </article>
-        <aside>
-            <h1>Aside Content</h1>
-            <p>Make the page narrower than 768px and this will move to underneath the main page content. </p>
-            <hr>
+        <aside class="col-lg-4">
+            <h2>Aside Content</h2>
+            <p>Te choro regione docendi vix, civibus splendide mel id. Id nulla homero has, et per porro aperiri habemus. Te ius causae convenire, ea reque choro pro. Sed discere nostrum antiopam ut, at praesent elaboraret quo.</p>
+            <p>Ei nam homero legendos torquatos, id sea primis maiorum reformidans. Id vim iudico minimum percipit, eum agam liberavisse cu. Et aliquip graecis epicuri pri, saepe option intellegebat in eam. Eu mea sint quidam vidisse, brute pericula te sed. Ut eum malis perfecto.</p>
+            <p>Ex duo reque labitur antiopam, an has veritus interpretaris, dolorem postulant id sea. Ridens option senserit usu no, mel ne admodum praesent, blandit referrentur an mel. Et vix agam dolor neglegentur, nec zril tritani delicata te. Idque solet percipitur ut eam, nam in ancillae temporibus, et nec dictas aliquid consetetur. Ea mei dictas epicuri eleifend, id purto nibh tota vix, sea congue nostrum appellantur no.</p>
+            <hr/>
         </aside>
     </main>
-
-    <script type="text/javascript">
-        //Tell the parent div it is a reactive iframe parent (this step can happen at any point)
-        var zIndex = 1000;
-        var heightToAdd = 0;
-        new reactive.iframes.Parent(document.getElementById('iframe-dynamic'), 'iframe-dynamic', heightToAdd, zIndex);
-    </script>
 </body>
 </html>
