more look'n'feel

--- a/index.html
+++ b/index.html
@@ -29,8 +29,24 @@
                     height:200px;
                     background-size: cover;
                     background-position: center;"></div>
-        <hr/>
     </header>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="http://campintouch/ui/forms/application/camper/App?domain=boulder&notemplate=1" target="CampMinderIFrame">Camper Application</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="http://campintouch/ui/forms/application/staff/App?domain=boulder&notemplate=1" target="CampMinderIFrame">Staff Application</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="http://campintouch/ui/photo/Albums?domain=boulder" target="_top">Photos!</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="http://campintouch/v2/login/login.aspx?domain=boulder&notemplate=1" target="CampMinderIFrame">Login</a>
+            </li>
+        </ul>
+    </nav>
+    <hr />
     <main class="row">
         <article class="col-lg-8">
             <h2>Main Page Content</h2>
@@ -38,13 +54,13 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus facilisis maximus urna quis scelerisque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nunc at sem vel quam congue pharetra. Integer at odio et dui tristique elementum. Integer quam lectus, euismod vel dictum ac, pellentesque id lectus. Morbi facilisis molestie tincidunt. Nam vitae est a nisl venenatis dignissim. Integer non laoreet libero. Mauris nisl mi, auctor id sagittis ut, interdum sed elit. Suspendisse potenti. Pellentesque tempor mi sapien, a lobortis tellus iaculis at. Vestibulum eget diam vulputate, varius lacus eget, tempor nisi. Proin aliquet nulla at rhoncus molestie.</p>
             <p>In tincidunt tortor ligula. Mauris molestie varius leo, et lacinia arcu pharetra quis. Maecenas tincidunt ex non odio pharetra porta. Nullam auctor efficitur metus id laoreet. Quisque volutpat risus at dapibus pharetra. Quisque accumsan molestie lobortis. Sed ut nisl elit. Sed non placerat elit, mollis aliquet velit.</p>
             <div id="iframe-dynamic" class="article-sub">
-                <iframe src="http://campintouch/ui/forms/application/camper/App?domain=boulder&notemplate=1"
-                        style="width:100%;
+                <iframe style="width:100%;
                                min-width:530px;
                                background-color:lightgrey;"
                         scrolling="no"
                         frameborder="0"
-                        id="CampMinderIFrame"></iframe>
+                        id="CampMinderIFrame"
+                        name="CampMinderIFrame"></iframe>
             </div>
             <hr />
         </article>
@@ -53,7 +69,7 @@
             <p>Te choro regione docendi vix, civibus splendide mel id. Id nulla homero has, et per porro aperiri habemus. Te ius causae convenire, ea reque choro pro. Sed discere nostrum antiopam ut, at praesent elaboraret quo.</p>
             <p>Ei nam homero legendos torquatos, id sea primis maiorum reformidans. Id vim iudico minimum percipit, eum agam liberavisse cu. Et aliquip graecis epicuri pri, saepe option intellegebat in eam. Eu mea sint quidam vidisse, brute pericula te sed. Ut eum malis perfecto.</p>
             <p>Ex duo reque labitur antiopam, an has veritus interpretaris, dolorem postulant id sea. Ridens option senserit usu no, mel ne admodum praesent, blandit referrentur an mel. Et vix agam dolor neglegentur, nec zril tritani delicata te. Idque solet percipitur ut eam, nam in ancillae temporibus, et nec dictas aliquid consetetur. Ea mei dictas epicuri eleifend, id purto nibh tota vix, sea congue nostrum appellantur no.</p>
-            <hr/>
+            <hr />
         </aside>
     </main>
 </body>
