put back the default url

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         <article class="col-lg-8">
             <h2>Main Page Content</h2>
             <h3>Static content section</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus facilisis maximus urna quis scelerisque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nunc at sem vel quam congue pharetra. Integer at odio et dui tristique elementum. Integer quam lectus, euismod vel dictum ac, pellentesque id lectus. Morbi facilisis molestie tincidunt. Nam vitae est a nisl venenatis dignissim. Integer non laoreet libero. Mauris nisl mi, auctor id sagittis ut, interdum sed elit. Suspendisse potenti. Pellentesque tempor mi sapien, a lobortis tellus iaculis at. Vestibulum eget diam vulputate, varius lacus eget, tempor nisi. Proin aliquet nulla at rhoncus molestie.</p>
             <p>In tincidunt tortor ligula. Mauris molestie varius leo, et lacinia arcu pharetra quis. Maecenas tincidunt ex non odio pharetra porta. Nullam auctor efficitur metus id laoreet. Quisque volutpat risus at dapibus pharetra. Quisque accumsan molestie lobortis. Sed ut nisl elit. Sed non placerat elit, mollis aliquet velit.</p>
             <div id="iframe-dynamic" class="article-sub">
-                <iframe style="width:100%;
+                <iframe src="http://campintouch/v2/login/login.aspx?domain=boulder&notemplate=1"
+                        style="width:100%;
                                min-width:530px;
                                background-color:lightgrey;"
                         scrolling="no"
