Fix and add links

--- a/index.html
+++ b/index.html
@@ -39,10 +39,13 @@
                 <a class="nav-link" href="http://campintouch/ui/forms/application/staff/App?domain=boulder&notemplate=1" target="CampMinderIFrame">Staff Application</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="http://campintouch/ui/photo/Albums?domain=boulder" target="_top">Photos!</a>
+                <a class="nav-link" href="http://campintouch/v2/login/login.aspx?domain=boulder&notemplate=1" target="CampMinderIFrame">Login</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="http://campintouch/v2/login/login.aspx?domain=boulder&notemplate=1" target="CampMinderIFrame">Login</a>
+                <a class="nav-link" href="http://campintouch/ui/photo/Albums?domain=boulder&notemplate=1" target="_top">Photos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="http://campintouch/myAccount.aspx?domain=boulder&notemplate=1" target="CampMinderIFrame">CIT Home</a>
             </li>
         </ul>
     </nav>
